# gnome-games

./: .editorconfig  .gitattributes  .gitlab-ci.yml  AUTHORS  COPYING  CodingStyle.txt  HACKING  HACKING.md  NEWS  README  README.md  autogen.sh  bsnes_mercury_accuracy.libretro  configure.ac  genesis_plus_gx.libretro  gnome-games.doap  mednafen_psx.libretro  meson.build  meson_options.txt  snes9x.libretro
data/: Makefile.am  gtk-style.css  meson.build  org.gnome.Games.SearchProvider.ini.in  org.gnome.Games.SearchProvider.service.in  org.gnome.Games.Tracker1.Miner.Applications.service.in  org.gnome.Games.Tracker1.Miner.Extract.service.in  org.gnome.Games.Tracker1.Miner.Files.service.in  org.gnome.Games.Tracker1.Writeback.service.in  org.gnome.Games.Tracker1.service.in  org.gnome.Games.appdata.xml.in  org.gnome.Games.appdata.xml.in.in  org.gnome.Games.desktop.in  org.gnome.Games.desktop.in.in  org.gnome.Games.gresource.xml  org.gnome.Games.gschema.xml  org.gnome.Games.rule.in  org.gnome.Games.service.in
data/gtk/: help-overlay.ui
data/icons/: meson.build
data/options/: Makefile.am  citra.options  desmume.options  dosbox_svn.options  flycast.options  meson.build  pcsx_rearmed.options  px68k.options
data/ui/: application-window.ui  checkmark-item.ui  collection-action-window.ui  collection-box.ui  collection-empty.ui  collection-header-bar.ui  collection-icon-view.ui  collection-thumbnail.ui  collection-view.ui  collections-main-page.ui  collections-page.ui  content-box.ui  controller-popover.ui  controller-reassigner.ui  developer-list-item.ui  display-box.ui  display-header-bar.ui  display-view.ui  dummy-display.ui  empty-collection.ui  empty-search.ui  error-display.ui  error-info-bar.ui  fullscreen-box.ui  game-icon-view.ui  gamepad-configurer.ui  gamepad-mapper.ui  gamepad-tester.ui  games-page.ui  input-mode-switcher.ui  keyboard-configurer.ui  keyboard-mapper.ui  keyboard-tester.ui  loading-box.ui  loading-header-bar.ui  media-menu-button.ui  media-selector.ui  message-dialog.ui  platform-list-item.ui  platforms-page.ui  (+34 more)
plugins/: Makefile.am  meson.build
plugins/desktop/: configure.ac
plugins/dreamcast/: configure.ac
plugins/game-cube/: configure.ac
plugins/libretro/: configure.ac
plugins/love/: configure.ac
plugins/mame/: configure.ac  meson.build
plugins/nintendo-ds/: configure.ac
plugins/playstation/: configure.ac
plugins/sega-cd/: configure.ac
plugins/sega-saturn/: configure.ac
plugins/steam/: configure.ac
plugins/turbografx-cd/: configure.ac
plugins/virtual-boy/: configure.ac
plugins/wii/: configure.ac
src/: Makefile.am  config.vala  config.vapi  credits.vala  gnome-games.deps  gtk-style.css  main.vala  meson.build  org.gnome.Games.gresource.xml  search-provider.vala
src/collection/: collection-manager.vala  collection-model.vala  collection.vala  dummy-add-collection.vala  favorites-collection.vala  recently-played-collection.vala  user-collection.vala
src/command/: command-runner.vala
src/core/: controller-set.vala  cooperative.vala  core.vala  cover-loader.vala  cover.vala  description.vala  developer.vala  firmware-error.vala  firmware-manager.vala  firmware.vala  game-collection.vala  game-model.vala  game-uri-adapter.vala  game.vala  genre.vala  input-capabilities.vala  input-mode.vala  media.vala  migrator.vala  platform-model.vala  platform-register.vala  platform.vala  players.vala  plugin-register-iterator.vala  plugin-registrar.vala  plugin.vala  publisher.vala  rating.vala  release-date.vala  runner-error.vala  runner-factory.vala  runner.vala  savestate.vala  snapshot-manager.vala  snapshot.vala  uid.vala  uri-game-factory.vala
src/database/: database-cooperative.vala  database-description.vala  database-developer.vala  database-game.vala  database-genre.vala  database-metadata.vala  database-players.vala  database-publisher.vala  database-rating.vala  database-release-date.vala  database-uid.vala  database.vala
src/dummy/: dummy-cooperative.vala  dummy-cover.vala  dummy-description.vala  dummy-developer.vala  dummy-game.vala  dummy-genre.vala  dummy-platform.vala  dummy-players.vala  dummy-publisher.vala  dummy-rating.vala  dummy-release-date.vala  dummy-runner.vala  dummy-uid.vala
src/gameinfo/: gameinfo-disc-id-input-capabilities.vala  gameinfo-doc.vala
src/gamepad/: event-codes.vapi  gamepad-dpad.vala  gamepad-input.vala  gamepad-mapper.vala  gamepad-mapping-builder.vala  gamepad-tester.vala
src/generic/: generic-cooperative.vala  generic-description.vala  generic-developer.vala  generic-game-uri-adapter.vala  generic-game.vala  generic-genre.vala  generic-input-capabilities.vala  generic-platform.vala  generic-players.vala  generic-publisher.vala  generic-rating.vala  generic-release-date.vala  generic-runner-factory.vala  generic-uri-game-factory.vala
src/grilo/: grilo-cooperative.vala  grilo-cover.vala  grilo-description.vala  grilo-developer.vala  grilo-genre.vala  grilo-media-queue.vala  grilo-media.vala  grilo-players.vala  grilo-publisher.vala  grilo-rating.vala  grilo-release-date.vala
src/keyboard/: keyboard-mapper.vala  keyboard-mapping-builder.vala  keyboard-mapping-manager.vala  keyboard-tester.ui  keyboard-tester.vala
src/preferences/: preferences-page-controllers.vala  preferences-page-import-export.ui  preferences-page-import-export.vala  preferences-page-platforms-retro-row.vala  preferences-page-platforms.ui  preferences-page-platforms.vala  preferences-page-video.vala  preferences-page.vala  preferences-subpage-gamepad.ui  preferences-subpage-gamepad.vala  preferences-subpage-keyboard.vala  preferences-window.vala
src/retro/: retro-core-manager.vala  retro-core-source.vala  retro-core.vala  retro-error.vala  retro-firmware.vala  retro-gamepad.vala  retro-input-manager.vala  retro-options.vala  retro-platform.vala  retro-runner-builder.vala  retro-runner-factory.vala  retro-runner.vala  retro-simple-game-uri-adapter.vala  retro-simple-type.vala  retro-simple-types.vala
src/screen-layout/: screen-layout-item.ui  screen-layout-item.vala  screen-layout-switcher.ui  (+2 more)
(+440 files in other folders)
